Fix sizing of projects on mobile screens

--- a/css/section-experience.css
+++ b/css/section-experience.css
@@ -27,7 +27,7 @@
     border-radius: 2px;
     padding-top: 24px;
     padding-bottom: 18px;
-    min-height: 200px;
+    min-height: 220px;
 }
 
 .projects-container>img {
